--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,5 +52,8 @@ line_length = 119
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.coverage.report]
+exclude_also = ["if __name__ == .__main__.:"]
+
 
 
